# Audrey

./: .dockerignore  .env.docker.example  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codex.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  server.json  tsconfig.json  vitest.config.js
.codex/: batch-embedding-audit.patch
.github/: pull_request_template.md
agents/: audrey_marketing_engagement.toml
benchmarks/: adapter-kit.mjs  adapter-self-test.mjs  baselines.js  build-leaderboard.mjs  cases.js  create-conformance-card.mjs  create-submission-bundle.mjs  dry-run-external-adapters.mjs  guardbench.js  perf-snapshot.js  perf.bench.js  public-paths.mjs  reference-results.js  report.js  run-external-guardbench.mjs  run.js  validate-adapter-module.mjs  validate-adapter-registry.mjs  validate-adapter-self-test.mjs  validate-guardbench-artifacts.mjs  verify-external-evidence.mjs  verify-publication-artifacts.mjs  verify-submission-bundle.mjs
docs/: AUDREY_PAPER_OUTLINE.md  MEMORY_BENCHMARKING.md  PRODUCTION_BACKLOG.md  audrey-for-dummies.md  benchmarking.md  future-of-llm-memory.md  mcp-hosts.md  ollama-local-agents.md  production-readiness.md
examples/: fintech-ops-demo.js  healthcare-ops-demo.js  ollama-memory-agent.js  stripe-demo.js
mcp-server/: config.js  config.ts  hooks.ts  index.js  index.ts  register.sh  serve.js  tool-schemas.ts  tool-validation.ts
python/: README.md  pyproject.toml
python-sdk/: README.md  pyproject.toml
python-sdk/src/audrey_memory/: __init__.py  async_client.py  client.py  models.py
python-sdk/tests/: conftest.py  test_client.py
python/audrey_memory/: __init__.py  client.py  types.py
python/tests/: test_client.py
scripts/: audit-release-completion.mjs  create-arxiv-source.mjs  create-paper-submission-bundle.mjs  finalize-release.mjs  install-audrey-machine.ps1  prepare-release-cut.mjs  publish-release-bundle.mjs  publish-release-github-api.mjs  run-vitest.mjs  smoke-cli.js  sync-paper-artifacts.mjs  verify-arxiv-compile.mjs  verify-arxiv-source.mjs  verify-browser-launch-plan.mjs  verify-browser-launch-results.mjs  verify-paper-artifacts.mjs  verify-paper-claims.mjs  verify-paper-submission-bundle.mjs  verify-publication-pack.mjs  (+2 more)
(+210 files in other folders)
