[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audrey-memory"
version = "0.20.0"
description = "Python SDK for Audrey — biological memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "evilander" }]
keywords = ["ai", "memory", "agents", "llm", "mcp", "biological-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/Evilander/Audrey"
Repository = "https://github.com/Evilander/Audrey"
